--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,21 @@
     color: var(--black);    
 }
 
-
-  
+.btn{
+  border-radius: 34px;
+  border: none;
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+  padding: 11px 26px;
+  background: linear-gradient(100deg, #fdc50f 26.71%, #fb982f 99.36%);
+  box-shadow: 0px 10px 14px 2px rgba(251, 161, 40, 0.42);
+}
+  .btn:hover{
+    background: white;
+    cursor: pointer;
+    color: var(--orange);
+    border: 1px solid var(--orange);
+  }
 
   
