--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+@font-face {
+  font-family: Gumela;
+  src: url('./fonts/Gumela\ Regular.otf');
+}
+  *{
+    font-family: 'Gumela';
+    font-weight: normal;
+    font-size: 20px;
+  }
+  body{
+    margin: 0;
+    padding: 0;
+  }
 :root
 {
   --yellow: #F5C32C;
