--- a/src/Component/Navbar/Navbar.css
+++ b/src/Component/Navbar/Navbar.css
@@ -25,12 +25,16 @@
 .n-list>ul{
     display: flex;
     gap: 2rem;
-    margin: 4rem;
+    margin: 2rem;
     list-style-type: none;
+}
+.n-list>ul>li{
+    padding: 10px;
 }
 .n-list>ul>li:hover{
     cursor: pointer;
     color: var(--orange);
+    border-bottom:2px solid var(--orange) ;
 }
 .n-btn{
     flex:2;
