--- a/src/Component/Portfolio/Portfolio.css
+++ b/src/Component/Portfolio/Portfolio.css
@@ -1,22 +1,24 @@
-.portfolio{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    height: 70h;
+.portfolio {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 70vh;
+
 }
+/* heading */
 .portfolio span:nth-of-type(1) {
-    color: var(--black);
-    font-size: 2rem;
-    font-weight: bold;
-  }
-  
-  .portfolio span:nth-of-type(2) {
-    color: var(--orange);
-    font-size: 2.5rem;
-    font-weight: bold;
-  }
-  
+  color: var(--black);
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.portfolio span:nth-of-type(2) {
+  color: var(--orange);
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
 /* slider */
 .portfolio .swiper{
     overflow: visible!important;
