--- a/src/Component/Services/services.css
+++ b/src/Component/Services/services.css
@@ -51,3 +51,12 @@ a{
     left:39rem;
     top: 8rem;
 }
+@media screen and (max-width: 400px){
+    .services{
+        margin-top:0;
+        flex-direction: column;
+        gap: 5rem;
+        height: 66rem;
+        padding: 0;
+    }
+}
