--- a/src/App.css
+++ b/src/App.css
@@ -46,5 +46,9 @@
     color: var(--orange);
     border: 1px solid var(--orange);
   }
-
+@media screen and (max-width: 400px){
+  .App{
+    padding: 0.5rem 1rem;
+  }
+}
   
