--- a/src/Component/Services/services.css
+++ b/src/Component/Services/services.css
@@ -7,9 +7,11 @@
     margin-bottom: 13rem;
 }
 .awesome{
+    width: 30%;
     display: flex;
     flex-direction: column;
     position: relative;
+    text-align: justify;
 }
 .awesome>:nth-child(1){
     color: var(--black);
@@ -58,5 +60,13 @@ a{
         gap: 5rem;
         height: 66rem;
         padding: 0;
+    }
+    .cards{
+        display: flex;
+        flex-direction: column;
+        gap: 17rem;
+    }
+    .cards>*{
+        position: static;
     }
 }
