page responsived and s.th changed

--- a/src/Component/Work/Work.css
+++ b/src/Component/Work/Work.css
@@ -73,3 +73,23 @@
     left: 18rem;
     top: 8rem;
 }
+@media screen and (max-width: 480px){
+    .works{
+        flex-direction: column;
+        height: 45rem;
+        padding: 0;
+        gap: 5rem;
+    }
+    .w-right{
+        display: flex;
+        align-items: flex-start;
+        justify-content: start;
+        transform: scale(0.6);
+    }
+    .w-mainCircle{
+        position: static;
+    }
+    .w-backCircle{
+        left: 8rem !important;
+    }
+}
