--- a/src/Component/Testimonials/Testimonial.css
+++ b/src/Component/Testimonials/Testimonial.css
@@ -46,6 +46,7 @@
     width: 6rem;
     height: 6rem;
     border-radius: 100%;
+    margin-bottom: 25px;
 }
 .testimonial>span{
     color: var(--gray);
