--- a/src/Component/Expeinces/Experiences.css
+++ b/src/Component/Expeinces/Experiences.css
@@ -8,6 +8,11 @@
      /* darkmode */
   color: var(--black);
 }
+.expe h2{
+    color: var(--orange);
+    font-size: 2.5rem;
+    font-weight: bold;
+}
 .achivement{
     display: flex;
     flex-direction: column;
