--- a/src/Component/Portfolio/Portfolio.css
+++ b/src/Component/Portfolio/Portfolio.css
@@ -30,10 +30,11 @@
 }
 
 .portfolio-slider .swiper-slide {
-  width: 20rem;
+  width:18rem;
+  height: 250px;
 }
 .portfolio img {
-  width: 19rem;
+  width: 14rem;
   filter: drop-shadow(-12px 15px 13px rgba(0, 0, 0, 0.25));
   border-radius: 19px;
 }
